SimpleWeather: moar logging
* Update NLog layout to properly log exceptions
* Log more for UWP BackgroundTasks
* Always log Debug and Info levels

--- a/SimpleWeather.UWP/NLog.config
+++ b/SimpleWeather.UWP/NLog.config
@@ -5,8 +5,10 @@
 
     <targets async="true">
         <target name="logfile" xsi:type="File" fileName="${var:LogPath}\logs\NLogger.log"
-                maxArchiveFiles="4" archiveAboveSize="10240" archiveEvery="Day" />
-        <target name="logconsole" xsi:type="OutputDebugString" />
+                maxArchiveFiles="4" archiveAboveSize="10240" archiveEvery="Day"
+                layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
+        <target name="logconsole" xsi:type="OutputDebugString"
+                layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
     </targets>
 
     <rules>
