--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -112,6 +112,7 @@
     <Content Include="Assets\BadgeLogo.scale-200.png" />
     <Content Include="Assets\BadgeLogo.scale-400.png" />
     <Content Include="Assets\Credits\licenses.html" />
+    <Content Include="Assets\Providers\here.png" />
     <Content Include="Assets\Providers\metno.png" />
     <Content Include="Assets\Providers\openweathermap.png" />
     <Content Include="Assets\Providers\wunderground.png" />
@@ -397,8 +398,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="SQLite.UWP.2015, Version=3.24.0">
-      <Name>SQLite for Universal Windows Platform %28SQLite.UWP.2015, Version=3.24.0%29</Name>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.25.2">
+      <Name>SQLite for Universal Windows Platform %28SQLite.UWP.2015, Version=3.25.2%29</Name>
     </SDKReference>
     <SDKReference Include="WindowsMobile, Version=10.0.14393.0">
       <Name>Windows Mobile Extensions for the UWP %28WindowsMobile, Version=10.0.14393.0%29</Name>
