--- a/SimpleWeather.UWP/NLog.config
+++ b/SimpleWeather.UWP/NLog.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      throwExceptions="true">
+      throwExceptions="true"
+      parseMessageTemplates="false">
 
     <targets async="true">
         <target name="logfile" xsi:type="File" fileName="${var:LogPath}\logs\NLogger.log"
-                maxArchiveFiles="4" archiveAboveSize="10240" archiveEvery="Day"
+                maxArchiveFiles="7" archiveEvery="Day" archiveNumbering="Date" archiveDateFormat="yyyy-MM-dd"
+                keepFileOpen="true" concurrentWrites="false" autoFlush="false"
                 layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
         <target name="logconsole" xsi:type="OutputDebugString"
                 layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
