SimpleWeather: bring back Yahoo API
* Use OAuth API endpoint
* Use WUnderground as a temporary geolocator (it's going out of service in Feb 2019)

--- a/.gitignore
+++ b/.gitignore
@@ -255,4 +255,5 @@ API_KEY.txt
 /MigrationBackup
 /SimpleWeather/HERE/HEREWeatherKey.cs
 /SimpleWeather/OpenWeather/OWMKey.cs
+/SimpleWeather/YahooWeather/YahooKey.cs
 /SimpleWeather/WeatherUnderground/WUKey.cs
