SimpleWeather: add support for Bing Maps
* Add support for Bing Maps as a backup location provider
* Include GeoTimeZone (https://github.com/mj1856/GeoTimeZone) to add TimeZone data

--- a/.gitignore
+++ b/.gitignore
@@ -253,6 +253,7 @@ API_KEY.txt
 /SimpleWeather.UWP/_pkginfo.txt
 /Components
 /MigrationBackup
+/SimpleWeather/Keys/BingMapsKey.cs
 /SimpleWeather/Keys/HEREWeatherKey.cs
 /SimpleWeather/Keys/OWMKey.cs
 /SimpleWeather/Keys/YahooKey.cs
