--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -483,6 +483,9 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GeoTimeZone">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
     </PackageReference>
