--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Controls\LineView.xaml.cs">
       <DependentUpon>LineView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\LocationQuery.cs" />
     <Compile Include="Controls\ProgressAutoSuggestBox.xaml.cs">
       <DependentUpon>ProgressAutoSuggestBox.xaml</DependentUpon>
     </Compile>
@@ -305,9 +306,6 @@
       <DependentUpon>LocationPanel.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\LocationPanelViewModel.cs" />
-    <Compile Include="Controls\LocationQuery.xaml.cs">
-      <DependentUpon>LocationQuery.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Controls\Snackbar.cs" />
     <Compile Include="Controls\TextForecastItem.xaml.cs">
       <DependentUpon>TextForecastItem.xaml</DependentUpon>
@@ -402,10 +400,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Controls\LocationQuery.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Controls\LineView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -462,6 +456,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="WeatherDetailsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -476,8 +474,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <SDKReference Include="SQLite.UWP.2015, Version=3.27.2">
-      <Name>SQLite for Universal Windows Platform %28SQLite.UWP.2015, Version=3.27.2%29</Name>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.28.0">
+      <Name>SQLite for Universal Windows Platform</Name>
     </SDKReference>
     <SDKReference Include="WindowsMobile, Version=10.0.17763.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
@@ -525,6 +523,9 @@
     </PackageReference>
     <PackageReference Include="SQLiteNetExtensions.Async">
       <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Runtime.InteropServices">
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.23.0</Version>
