--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,8 @@ API_KEY.txt
 /SimpleWeather/Keys/OWMKey.cs
 /SimpleWeather/Keys/YahooKey.cs
 /SimpleWeather/Keys/WUKey.cs
+/SimpleWeather/Keys/YahooKey.cs.bak
+/SimpleWeather/Keys/WUKey.cs.bak
+/SimpleWeather/Keys/OWMKey.cs.bak
+/SimpleWeather/Keys/HEREWeatherKey.cs.bak
+/SimpleWeather/Keys/BingMapsKey.cs.bak
