NLog: update config
* Close file if inactive after 30 sec
* Allow archiving and deleting to react faster

--- a/SimpleWeather.UWP/NLog.config
+++ b/SimpleWeather.UWP/NLog.config
@@ -7,7 +7,7 @@
     <targets async="true">
         <target name="logfile" xsi:type="File" fileName="${var:LogPath}\logs\NLogger.log"
                 maxArchiveFiles="7" archiveEvery="Day" archiveNumbering="Date" archiveDateFormat="yyyy-MM-dd"
-                keepFileOpen="true" concurrentWrites="false" autoFlush="false"
+                keepFileOpen="true" concurrentWrites="false" openFileCacheTimeout="30" autoFlush="false"
                 layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
         <target name="logconsole" xsi:type="OutputDebugString"
                 layout="${longdate}|${level:uppercase=true}|${message}${when:when=length('${exception}')>0:Inner=${newline}}${exception:format=tostring}" />
