SimpleWeather: change logger implementation
* Switch from NLog to Timber (basic port from Timber for Android: https://github.com/JakeWharton/timber)
* Remove references to NLog
* Add a logging extension for tracking crashes/errors with AppCenter

--- a/EFProject/EFProject.csproj
+++ b/EFProject/EFProject.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="NodaTime" Version="2.4.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Timber\Timber.csproj" />
+  </ItemGroup>
+
   <Import Project="..\SimpleWeather.EF\SimpleWeather.EF.projitems" Label="Shared" />
 
 </Project>
