--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -586,9 +586,6 @@
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.3.191211002</Version>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
-    </PackageReference>
     <PackageReference Include="NodaTime">
       <Version>2.4.7</Version>
     </PackageReference>
@@ -603,6 +600,12 @@
     </PackageReference>
     <PackageReference Include="System.Runtime.InteropServices">
       <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>4.7.1</Version>
+    </PackageReference>
+    <PackageReference Include="Utf8Json">
+      <Version>1.3.7</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.24.0</Version>
