UnitTestProject: remove dependecy from main project
* Build seperately from main UWP project
* Resolve build errors

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ API_KEY.txt
 /SimpleWeather/Keys/OWMKey.cs.bak
 /SimpleWeather/Keys/HEREWeatherKey.cs.bak
 /SimpleWeather/Keys/BingMapsKey.cs.bak
+/SimpleWeather/Keys/AppCenterKey.cs.bak
