--- a/UnitTestProject/UnitTestProject.csproj
+++ b/UnitTestProject/UnitTestProject.csproj
@@ -137,20 +137,46 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GeoTimeZone">
+      <Version>4.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <Version>3.1.2</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>3.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.9</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
-      <Version>1.4.0</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
-      <Version>1.4.0</Version>
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="NodaTime">
+      <Version>2.4.7</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>4.7.1</Version>
+    </PackageReference>
+    <PackageReference Include="Utf8Json">
+      <Version>1.3.7</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SimpleWeather.UWP\SimpleWeather.UWP.csproj">
-      <Project>{552847dd-608d-4da9-9ced-0c8416049742}</Project>
-      <Name>SimpleWeather.UWP</Name>
+    <ProjectReference Include="..\Timber\Timber.csproj">
+      <Project>{479286ce-e244-4d81-a8f4-a5982af86af9}</Project>
+      <Name>Timber</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +187,9 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.png" />
   </ItemGroup>
+  <Import Project="..\SimpleWeather.EF\SimpleWeather.EF.projitems" Label="Shared" />
+  <Import Project="..\SimpleWeather\SimpleWeather_Xamarin.projitems" Label="Shared" />
+  <Import Project="..\SimpleWeather.UWP.Shared\SimpleWeather.UWP.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
