SimpleWeather: try to improve performance
* Use generated Utf8Json formatters/resolvers
* DBContext: disable lazy loading and change autodetection

--- a/EFProject/EFProject.csproj
+++ b/EFProject/EFProject.csproj
@@ -7,6 +7,10 @@
     <RootNamespace>SimpleWeather.Data</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;EF_PROJECT</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
