--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,5 @@ API_KEY.txt
 /SimpleWeather/Keys/HEREWeatherKey.cs.bak
 /SimpleWeather/Keys/BingMapsKey.cs.bak
 /SimpleWeather/Keys/AppCenterKey.cs.bak
+/Utf8Json.UniversalCodeGenerator
+/GenerateUtf8JsonResolvers.bat
