WeatherNow: try to optimize the page
* Use defered loading where possible
* LineView: incremental loading fixes
* Move common attributes to a style
* Change wind direction to show 'Wind from' direction (this is the correct way)
* Move VisualState changes to code-behind (defered loading makes working with VisualStates difficult)
* Fix the tap event for GraphView

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -290,6 +290,7 @@
     <Compile Include="Controls\WeatherAlertPanel.xaml.cs">
       <DependentUpon>WeatherAlertPanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ControlSizeTrigger.cs" />
     <Compile Include="Helpers\LocationTypeConverter.cs" />
     <Compile Include="Helpers\BooleanToGridLengthConverter.cs" />
     <Compile Include="Helpers\ColorToSolidColorBrushConverter.cs" />
