WeatherAlertsPage: fix issue when opening alert notification
* Allow loading weather data from Page if view model is empty or invalid
* Open directly to WeatherAlertsPage from notification
* Go back to WeatherNow page when back key is pressed

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -303,6 +303,7 @@
     <Compile Include="Helpers\VisualTreeHelperExtensions.cs" />
     <Compile Include="Main\DetailsPageArgs.cs" />
     <Compile Include="Main\LocationPanelAdapter.cs" />
+    <Compile Include="Main\WeatherPageArgs.cs" />
     <Compile Include="Tiles\SecondaryTileUtils.cs" />
     <Compile Include="Helpers\StringBooleanConverter.cs" />
     <Compile Include="Helpers\IPageVerification.cs" />
