--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -288,6 +288,9 @@
     <Compile Include="Controls\SunPhasePanel.xaml.cs">
       <DependentUpon>SunPhasePanel.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\AQIControl.xaml.cs">
+      <DependentUpon>AQIControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\UVControl.xaml.cs">
       <DependentUpon>UVControl.xaml</DependentUpon>
     </Compile>
@@ -454,6 +457,10 @@
     <Page Include="Controls\SunPhasePanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\AQIControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\UVControl.xaml">
       <SubType>Designer</SubType>
