SimpleWeather: add ExtendingWrapPanel
* Based on the WrapPanel control from the Microsoft Community Toolkit
* The panel stretches items to fit a specified minimum width and ensures items fill the space in the panel

--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Controls\DetailItem.xaml.cs">
       <DependentUpon>DetailItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ExtendingWrapPanel.cs" />
     <Compile Include="Controls\ForecastGraphPanel.xaml.cs">
       <DependentUpon>ForecastGraphPanel.xaml</DependentUpon>
     </Compile>
