SimpleWeather: remove weather backgrounds from package
* Image assets take up a good chunk of space in the package
* I want to start factoring out non-essential data like this from the actual package and download and store/cache this once the app is running
* Use Firebase to share with Android app
* Move image assets to Firebase Storage
* Store image metadata and links in Cloud Firestore
* Add Firestore snapshot "cache" implementation to avoid calling database everytime
* Cache images from Firestore on-demand to avoid downloading everytime
* Start of remote configuration

--- a/.gitignore
+++ b/.gitignore
@@ -258,11 +258,13 @@ API_KEY.txt
 /SimpleWeather/Keys/OWMKey.cs
 /SimpleWeather/Keys/YahooKey.cs
 /SimpleWeather/Keys/AQICNKey.cs
+/SimpleWeather/Keys/FirebaseConfig.cs
 /SimpleWeather/Keys/YahooKey.cs.bak
 /SimpleWeather/Keys/OWMKey.cs.bak
 /SimpleWeather/Keys/HEREWeatherKey.cs.bak
 /SimpleWeather/Keys/BingMapsKey.cs.bak
 /SimpleWeather/Keys/AppCenterKey.cs.bak
 /SimpleWeather/Keys/AQICNKey.cs.bak
+/SimpleWeather/Keys/FirebaseConfig.cs.bak
 /Utf8Json.UniversalCodeGenerator
 /GenerateUtf8JsonResolvers.bat
