--- a/SimpleWeather.UWP/SimpleWeather.UWP.csproj
+++ b/SimpleWeather.UWP/SimpleWeather.UWP.csproj
@@ -116,11 +116,11 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <Content Include="Assets\AppLogo.png" />
-    <Content Include="Assets\Backgrounds\RainyDay.jpg" />
-    <Content Include="Assets\Backgrounds\RainyNight.jpg" />
-    <Content Include="Assets\Backgrounds\Snow-Windy.jpg" />
-    <Content Include="Assets\Backgrounds\Thunderstorm-Day.jpg" />
-    <Content Include="Assets\Backgrounds\Thunderstorm-Night.jpg" />
+    <Content Include="Assets\Backgrounds\day.jpg" />
+    <Content Include="Assets\Backgrounds\night.jpg" />
+    <Content Include="Assets\Backgrounds\rain.jpg" />
+    <Content Include="Assets\Backgrounds\Snow.jpg" />
+    <Content Include="Assets\Backgrounds\storms.jpg" />
     <Content Include="Assets\BadgeLogo.scale-125.png" />
     <Content Include="Assets\BadgeLogo.scale-150.png" />
     <Content Include="Assets\BadgeLogo.scale-200.png" />
@@ -391,16 +391,6 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Backgrounds\DaySky.jpg" />
-    <Content Include="Assets\Backgrounds\Dust.jpg" />
-    <Content Include="Assets\Backgrounds\FoggySky.jpg" />
-    <Content Include="Assets\Backgrounds\MostlyCloudy-Day.jpg" />
-    <Content Include="Assets\Backgrounds\MostlyCloudy-Night.jpg" />
-    <Content Include="Assets\Backgrounds\NightSky.jpg" />
-    <Content Include="Assets\Backgrounds\PartlyCloudy-Day.jpg" />
-    <Content Include="Assets\Backgrounds\PartlyCloudy-Night.jpg" />
-    <Content Include="Assets\Backgrounds\Snow.jpg" />
-    <Content Include="Assets\Backgrounds\StormySky.jpg" />
     <Content Include="Assets\BadgeLogo.scale-100.png" />
     <Content Include="Assets\Square150x150Logo.scale-100.png" />
     <Content Include="Assets\Square310x310Logo.scale-100.png" />
@@ -558,8 +548,17 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FirebaseAuthentication.net">
+      <Version>3.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="FirebaseStorage.net">
+      <Version>1.0.3</Version>
+    </PackageReference>
     <PackageReference Include="GeoTimeZone">
       <Version>4.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Google.Cloud.Firestore">
+      <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
       <Version>2.6.4</Version>
